# AMCSET

./: .gitignore  ;  CMakeLists.txt  CMakePresets.json  ConanPresets.json  Dockerfile  Doxyfile  README.md  build.sh  conanfile.py  conanfile.txt  ignore_ConanPresets.json  ignore_conanfile.py  pip_requirements.txt  qbuild.sh  settings.txt
.github/workflow/: gtest.yml
.github/workflows/: gtest.yml
PythonCode/: #Sub Routine Functions.py  README.md  Sub Routine Functions.py  inputs.py  main.py  shao_utils.py
QuickBasicCode/: MCSHAO.txt
amcset_gui/: CMakeLists.txt  amcset_main_window.cpp  amcset_main_window.h  amcset_main_window.ui  main.cpp  mainwindow.cpp  mainwindow.ui
common/: CMakeLists.txt
common/include/: amcset_common.h  amcset_utilities.h  config.h.in  isotope_data.h  isotope_mass_data.h
common/src/: amcset_common.cpp
cpp/: CMakeLists.txt  settings.txt
cpp/src/: constants.h  eSRIM_classes.cpp  eSRIM_classes.h  main  main.cpp  utilities.cpp  utilities.h
cpp/test_files/: filesystem_test.cpp  lifetime_test.cpp  static_test.cpp
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
gui/include/: amcset_gui.h
gui/src/: amcset_gui.cpp  main.cpp
include/: AMCSET.h  AMCSET_classes.h  constants.h  eSRIM.h  eSRIM_classes.h  main.h  utilities.h
input/: electron_screeening_potentials.csv
latex/: main.tex  quickbasic.py
matlab/: data_plotting.mlx
python/: cpp_interface.py  graphing.py  graphing_alt.py  main.py  shao_utils.py  table.py  tkinter_mlab.py
python/input/: mott_potentials.csv  screeening_potentials.csv
quick_basic/: MCSHAO.bas
server/: CMakeLists.txt
server/include/: amcset_server.h
server/src/: amcset_server.cpp  main.cpp
src/: AMCSET.cpp  AMCSET_classes.cpp  constants.h  eSRIM.cpp  eSRIM_classes.cpp  main.cpp  utilities.cpp
test/: CMakeLists.txt
test/common/: common_test.cpp
test_files/: main_arguments.cpp  matrix_m.f95  matrix_multiply.cpp  pipe_communication.cpp  pipe_communication.py  shared_weak_ptr_test.cpp  signalling.cpp  smart_pointer.cpp  stack_inside_function.cpp
testing/: README.md  plot.jl  plot.py  test.cpp
tests/: mainFunctionTest.cpp  mainTest.cpp
